# real-time-content-ranking-system

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  sitecustomize.py
.github/workflows/: ci.yml
apps/: __init__.py
apps/web/: .env.example  .gitignore  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
apps/web/lib/: api.ts  format.ts  (+6 more)
docs/: api.md  architecture-overview.md  demo-scenarios.md  domain-model.md  interview-guide.md  observability.md  project-retrospective.md  reference-scenarios.md  repository-standards.md
docs/adr/: 0001-monorepo-decision.md
docs/api/: README.md  analytics-service.md  content-service.md  experimentation-service.md  feature-processor.md  feed-service.md  interaction-service.md  ranking-service.md  user-service.md
docs/runbooks/: debugging.md  local-monitoring.md
docs/screenshots/: README.md
infra/: __init__.py
infra/docker/: .dockerignore  docker-compose.yml  prometheus.yml
scripts/: README.md  demo_dataset.py  format.sh  generate_docker_configs.py  generate_services.py  lint.sh  requirements.txt  reset_demo_state.py  reset_local_database.py  reset_reference_state.py  run_demo_stack.sh  run_migrations.sh  run_platform_stack.sh  run_service.sh  seed_content.py  seed_demo_state.py  seed_reference_state.py  seed_users.py  seed_utils.py  setup_demo.sh  setup_reference_data.sh
services/: __init__.py
services/analytics-service/: requirements.txt
services/content-service/: alembic.ini  requirements.txt
(+200 files in other folders)
